# mycelium

./: .env.example  .gitignore  README.md  SETUP.md  project_vision.md  pyproject.toml
.claude/skills/kb-authoring/: SKILL.md
.claude/skills/mycelium-authoring/: SKILL.md
.claude/skills/mycelium-draft/: SKILL.md
.claude/skills/mycelium-guide-authoring/: SKILL.md
.githooks/: pre-commit
.github/workflows/: lint-test.yml  publish-images.yml
bench/: README.md  run.py
deploy/: README.md  deploy.sh  install-server.sh  myc
docker/: .dockerignore  Dockerfile  Dockerfile.ollama  entrypoint.sh  litestream.yml
docs/: AUTH0.md  DEPLOYMENT.md  MENTION_CORRECTION_DESIGN.md  STYLE.md  USERS.md  mycelium.md
scripts/: agent.py  audit_phrasing.py  backfill_derived_mentions.py  build_entity_layout.py  cleanup_leaky_behaviors.py  detector.py  embed_bench.py  list_annotations.py  logger.py  mcp_client.py  plan.py  recover_stranded_vectors.py  render_entity_graph.py  smoke.py  state.py
src/mycelium/: __init__.py  __main__.py  agentloop.py  app_context.py  auth.py  auth_store.py  backup.py  connect_page.py  connections.py  drafts_store.py  embed.py  http.py  init_kb.py  layout_baker.py  link_rules.py  mention_worker.py  mentions.py  migrations.py  oauth_server.py  oidc.py  ops_ledger.py  phrasing.py  plurals.py  require.py  research_runs.py  research_store.py  server.py  store.py  survey.py  timestamps.py  tracing.py  vector.py  when_expression.py
src/mycelium/ask/: __init__.py  config.py  loop.py  prompts.py  schema.py  substrate.py  tools.py  trace.py
src/mycelium/cockpit/: api.js  app.jsx  ask.jsx  cockpit.css  coverage.css  coverage.jsx  (+8 more)
tests/: conftest.py  test_annotations.py  test_ask.py  test_audit.py  test_auth.py  test_auth_migration.py  test_backup.py  test_connection_isolation.py  test_drafts.py  test_entity_statement_links.py  test_error_logging.py  test_gaps.py  test_history.py  test_http.py  test_ingest.py  test_jit_provisioning.py  test_layout_baker.py  test_link_direction.py  test_mention_derivation.py  test_mention_worker.py  test_mentions.py  test_migrations.py  test_oauth.py  test_ops_ledger.py  test_phrasing.py  test_phrasing_endpoints.py  test_plurals.py  test_require.py  test_research.py  test_research_http.py  test_research_runs.py  test_research_sources.py  test_research_workspace.py  test_restore_rebuild.py  test_store.py  test_survey.py  test_vector.py  test_when_endpoints.py  test_when_expression.py
(+50 files in other folders)
